Fix T38074: sequence rendering gave "No camera" warning for other scenes that didn't need a camera because they use only compositing nodes.